Add a Demand resource and support GET (with unit tests, acceptance tests, and updated doc) Refactor Project resource acceptance tests based on light bulbs so that they don't have to run in sequence Create a utility module Figured out that I while I have to use toArray() to get the Mongo Promise to work, I don't want to return an array of just 1 object. - Refactor
