# api_doc/v1/swagger.json
@@ -25,6 +25,9 @@
         },
         {
             "name": "Project"
+        },
+        {
+            "name": "Demand"
         }
     ],
     "paths": {
@@ -248,6 +251,45 @@
                         "schema": {
                             "title": "OK",
                             "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Project was not found",
+                        "schema": {
+                            "title": "error",
+                            "type": "object"
+                        }
+                    },
+                    "500": {
+                        "description": "Server Error",
+                        "schema": {
+                            "title": "error",
+                            "type": "object"
+                        }
+                    }
+                }
+            }
+        },
+        "/project/<name>/demand": {
+            "get": {
+                "tags": [
+                    "Demand"
+                ],
+                "description": "Provides the demand resource of a project.\n",
+                "parameters": [
+                    {
+                        "name": "name",
+                        "in": "query",
+                        "type": "string",
+                        "description": "The name of the Project to act upon."
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful response",
+                        "schema": {
+                            "title": "demand",
+                            "type": "object"
                         }
                     },
                     "404": {
